simplified and fixed some spacing errors

--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@ nav{
 }
 
 nav li{
-    display: inline;
+    display: inline-block;
     padding: 15px;
 }
 
@@ -29,7 +29,6 @@ nav li{
 
 /* sets the text style in the nav */
 .header{
-    /* padding: 10px; */
     list-style: none;
     text-decoration: none;
     color: #070707;
@@ -54,6 +53,33 @@ h2{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: lightcoral;
     font-weight: 900;
+    text-align: center;
+}
+
+.tcenter{
+    text-align: center;
+    margin-left: 150px;
+    margin-right: 150px;
+}
+
+#mainsub{
+    text-align: center;
+    font-size: 50px;
+}
+
+#maintxt{
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#mainimg{
+    width: 900px;
+    height: 500px;
+    margin-left: 350px;
+    margin-right: 200px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 20px;
 }
 
 /* sets the text size */
@@ -62,6 +88,8 @@ h2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: 20px;
     margin-right: 20px;
+    height: max-content;
+    display: inline-block;
 }
 
 /* sets the website title style */
@@ -75,21 +103,6 @@ h2{
     display: inline;
     margin-left: 50px;
 } 
-
-/* sets the aside styles */
-#characters
-{
-    background: #b1b2b5ff;
-    float: right;
-    padding: 5px;   
-    margin: 5px; 
-    height: max-content;
-    width: 250px;
-    display: inline;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-radius:10px;
-}
 
 /* sets the images style within a figcaption tag */
 figure img:hover
@@ -112,7 +125,14 @@ figure img:hover
 
 /* sets style for houses images */
 .hsimages{
-    margin: auto;
+    border-radius:10px;
+    height: max-content;
+}
+
+.hsimages2{
+    float: left;
+    margin-top: 20px;
+    display: inline;
     border-radius:10px;
 }
 
@@ -138,27 +158,11 @@ hr{
     color: #b89c2cff;
 }
 
-/* setting the aside text color */
-.aside_color{
-    color: brown;
-}
 
 .Sbars{
     border-radius:10px;
     margin-left: 650px;
     padding: 8px;
-}
-
-
-
-/* sets the style for the houses image in main */
-#hgimage{
-    float: right;
-    width: 700px;
-    margin-right: 250px;
-    margin-top: 90px;
-    border-radius: 10px;
-    border: 5px 5px 5px 5px white;
 }
 
 .button{
@@ -172,8 +176,14 @@ hr{
     text-decoration: none;
 }
 
-.houses_text{
-    text-align: center;
+.botonsito{
+    left: 92%;
+    top:398%;
+    position: absolute;
+}
+
+.housetxt{
+    margin-top: 215px;
 }
 
 footer{
@@ -181,3 +191,4 @@ footer{
     background: #000000ff;
     color: whitesmoke;
 }
+
